# aswathamaclasses

./: .env.example  .gitignore  .replit  GOOGLE_APPS_SCRIPT_CODE.js  GOOGLE_APPS_SCRIPT_SETUP.md  Procfile  SETUP_GOOGLE_SHEETS.md  google_apps_script_service.py  google_sheets_api.gs  google_sheets_direct.py  google_sheets_service.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  service_account.json  sheets_service.py  student_data.py  students.json  youtube_service.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1767075538986.txt  Pasted--type-service-account-project-id-aswathama-classes-priv_1766651061359.txt  Pasted--type-service-account-project-id-secret-drake-434705-j6_1766742697043.txt  Pasted--type-service-account-project-id-secret-drake-434705-j6_1766746590101.txt  Pasted-2025-12-25T07-23-59-700494785Z-2025-12-25T07-23-59-7004_1766647677407.txt  Pasted-2025-12-25T07-37-33-183484209Z-File-opt-render-project-_1766648290325.txt  Pasted-Convert-this-website-ashwathama-online-into-a-fully-fun_1768040438069.txt  Pasted-The-PWA-install-popup-is-working-but-looks-unprofession_1768040732136.txt  Pasted-Update-my-website-by-adding-a-new-Exams-Timetable-featu_1767022515770.txt  Pasted-You-are-a-senior-full-stack-web-developer-and-UI-UX-des_1765612235962.txt  Pasted-You-are-an-expert-full-stack-SEO-optimized-Flask-develo_1766846084614.txt  branding-1765612009024.json
cred/: service_account.json
static/: manifest.json  service-worker.js
templates/: about.html  admin_dashboard.html  admin_login.html  admissions.html  (+21 more)
(+2 files in other folders)
