[project]
name = "aswathama-classes"
version = "0.1.0"
description = "ASWATHAMA CLASSES - Professional Coaching Institute Website"
authors = ["Aswathama Classes <aswathamaclasses@gmail.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "gunicorn>=23.0.0",
]
